<resources>
    <string name="app_name">MLPlusAndroid</string>
    <string name="sepal_length">Sepal Length:</string>
    <string name="age">Age</string>
    <string name="fill_below_required_fields">Fill Below Required Fields</string>
    <string name="ml_android_test">ML + Android Test</string>
    <string name="gender">Gender:</string>
    <string name="blood_pressure">Blood Pressure</string>
    <string name="cholesterol">Cholesterol</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="maximum_heart_rate">Maximum Heart Rate:</string>
    <string name="st_depression">ST Depression</string>
    <string name="max_vessels">Max Vessels</string>
    <string name="predict">Predict</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="heart_disease">Heart Disease:</string>
</resources>